fix image alignment design issues

--- a/assets/scss/_wp_tinymce_styles.scss
+++ b/assets/scss/_wp_tinymce_styles.scss
@@ -2,17 +2,16 @@ img.centered, .aligncenter, div.aligncenter {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 12px;
 }
 
 img.alignright {
-  padding: 4px;
-  margin: 0 0 2px 7px;
+  margin: 0 0 12px 12px;
   display: inline;
 }
 
 img.alignleft {
-  padding: 4px;
-  margin: 0 7px 2px 0;
+  margin: 0 12px 12px 0;
   display: inline;
 }
 
@@ -25,26 +24,17 @@ img.alignleft {
 }
 
 .wp-caption {
-  border: 1px solid #ddd;
   text-align: center;
-  background-color: #f3f3f3;
-  padding-top: 4px;
-  margin: 10px;
-  -moz-border-radius: 3px;
-  -khtml-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-}
 
-.wp-caption img {
-  margin: 0;
-  padding: 0;
-  border: 0 none;
-}
+  &.alignright {
+    margin: 0 0 12px 12px;
+  }
+  &.alignleft {
+    margin: 0 12px 12px 0;
+  }
 
-.wp-caption p.wp-caption-text {
-  font-size: 11px;
-  line-height: 17px;
-  padding: 0 4px 5px;
-  margin: 0;
+  p.wp-caption-text {
+    font-size: $font-size-small;
+    margin: 0;
+  }
 }
